Fixed a bug when selecting a board from homepage, stopped the vertical scrollbar from appearing, no styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,3 +65,15 @@ body {
 .width-230px {
   width: 230px;
 }
+
+body::-webkit-scrollbar {
+
+}
+
+body {
+  overflow-y: hidden;
+}
+
+.board {
+  overflow-x: scroll;
+}
